--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vexflow": "^5.0.0"
   },
   "devDependencies": {
     "jest": "^29.6.2",
